fixed mobile title alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,13 +17,13 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: end;
-    //align-self: center;
+    text-align: center;
 
     .title {
         font-size: 1.5rem;
         letter-spacing: .4rem;
         color: white;
-        margin-top: 10rem;
+        margin-top: 10rem;  
     }
 }
 
